Better  test coverage - usage, examples, operations
Fixes #7445